--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23973,7 +23973,7 @@ img.absolute_image {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #2d3545;
+    /* background-color: #2d3545; */
     width: 0;
     height: 0;
     z-index: -1;
@@ -23981,7 +23981,7 @@ img.absolute_image {
 }
 
 .firm-shortcode a:hover {
-    background-color: #2d3545;
+    /* background-color: #2d3545; */
     border-color: #2d3545;
     cursor: pointer;
     transition: all .3s ease-in-out .2s
